<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_marginTop="100dp"
    tools:context=".activities.SplashScreenActivity">

    <TextView
        android:text="@string/app_name"
        android:textSize="35sp"
        android:textStyle="bold"
        android:fontFamily="@font/abril_fatface"
        android:textColor="@android:color/black"
        android:gravity="center_horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <ImageView
        android:src="@drawable/globe"
        android:layout_gravity="center_horizontal"
        android:layout_width="250dp"
        android:layout_height="250dp"
        android:layout_marginTop="10dp"/>

    <TextView
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="cursive"
        android:gravity="center_horizontal"
        android:text="@string/creator"
        android:textColor="@android:color/black"
        android:textSize="20sp"/>

    <TextView
        android:layout_gravity="center_horizontal"
        android:layout_marginBottom="5dp"
        android:gravity="bottom"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:text="@string/usedAPI"
        android:textColor="@android:color/black"
        android:textSize="15sp"/>

</LinearLayout>