<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/app_padding"
    android:scrollbars="vertical"
    tools:context=".activities.MainActivity">

    <TextView
        android:id="@+id/headingTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_start_text"
        android:fontFamily="@font/abril_fatface"
        android:text="@string/heading_headlines"
        android:textColor="@android:color/black"
        android:textSize="30sp" />

    <LinearLayout
        android:id="@+id/sortByLinearLayout"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_gravity="center_vertical"
            android:text="@string/sort_by"
            android:layout_marginStart="@dimen/margin_start_text"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Spinner
            android:id="@+id/sortBySpinner"
            android:layout_weight="1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="@dimen/card_corner_radius"
        app:cardUseCompatPadding="true"
        app:cardElevation="@dimen/card_elevation">


    <SearchView
        android:id="@+id/searchView"
        android:clickable="true"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:queryHint="@string/search_hint"/>

    </androidx.cardview.widget.CardView>

    <androidx.recyclerview.widget.RecyclerView
        android:layout_gravity="center_horizontal"
        android:id="@+id/categoryNewsRecyclerView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipeRefreshLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <androidx.core.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="@dimen/card_corner_radius"
                    app:cardElevation="@dimen/card_elevation"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:orientation="horizontal">

                        <ImageView
                            android:id="@+id/weatherImageView"
                            android:layout_width="60dp"
                            android:layout_height="60dp"
                            android:layout_gravity="center_vertical" />

                        <TextView
                            android:id="@+id/temperatureTextView"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_marginStart="0dp"
                            android:gravity="center_vertical"
                            android:text="1\u00B0"
                            android:textSize="30sp" />

                        <ImageView
                            android:id="@+id/locationIcon"
                            android:layout_width="20dp"
                            android:layout_height="20dp"
                            android:layout_gravity="top"
                            android:layout_marginStart="20dp"
                            android:layout_marginTop="5dp"
                            android:src="@drawable/ic_location_on_black_24dp" />

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:orientation="vertical">

                            <TextView
                                android:id="@+id/townTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="town"
                                android:textSize="20sp" />

                            <TextView
                                android:id="@+id/appTempTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:paddingTop="@dimen/app_padding"
                                android:text="@string/app_temperature"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/humidityTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/humidity"
                                android:textSize="12sp" />

                            <TextView
                                android:id="@+id/windSpeedTextView"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:text="@string/wind_speed"
                                android:textSize="12sp" />

                        </LinearLayout>

                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/newsRecyclerView"
                    android:nestedScrollingEnabled="false"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"/>

            </LinearLayout>

        </androidx.core.widget.NestedScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

</LinearLayout>